2008-04-25  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtpmanager/gstrtpbin.c: (gst_rtp_bin_associate),
	(gst_rtp_bin_sync_chain):
	* gst/rtpmanager/rtpsession.c: (update_arrival_stats),
	(rtp_session_process_sr), (rtp_session_on_timeout):
	* gst/rtpmanager/rtpsource.c: (rtp_source_init),
	(calculate_jitter):
	* gst/rtpmanager/rtpsource.h:
	* gst/rtpmanager/rtpstats.h:
	Also keep track of the first buffer timestamp together with the first
	RTP timestamp as they both are needed to construct the timing of
	outgoing packets in the jitterbuffer and are therefore also needed to
	manage lip-sync. This fixes lip-sync if the first RTP packets arrive
	with a wildly different gap.

2008-04-25  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/flv/gstflvdemux.c: (gst_flv_demux_query):
	Forward unknown queries upstream instead of returning FALSE on them.

2008-04-25  Sebastian Dröge  <slomo@circular-chaos.org>

	* configure.ac:
	* ext/musepack/gstmusepackdec.c: (gst_musepackdec_base_init),
	(gst_musepackdec_init), (gst_musepackdec_dispose),
	(gst_musepackdec_handle_seek_event), (gst_musepack_stream_init),
	(gst_musepackdec_loop), (plugin_init):
	* ext/musepack/gstmusepackdec.h:
	* ext/musepack/gstmusepackreader.c:
	* ext/musepack/gstmusepackreader.h:
	Add support for the new libmpcdec API which magically gets us support
	for SV8 files. Also do some random cleanup. Fixes bug #526905.

2008-04-24  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	Back to development -> 0.10.7.1

=== release 0.10.7 ===

2008-04-24  Jan Schmidt <jan.schmidt@sun.com>

	* configure.ac:
	  releasing 0.10.7, "House of Cards"

2008-04-22  Stefan Kost  <ensonic@users.sf.net>

	* ext/faad/gstfaad.c:
	  Don't leak GstAudioChannelPosition. Fixes #529378.

2008-04-22  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/sdp/gstsdpdemux.c: (request_pt_map):
	Ref caps, see #528245.

2008-04-22  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	0.10.6.4 pre-release
